# spiceypy-cyice-scikit-build-core-test

./: .gitignore  CMakeLists.txt  LICENSE  pyproject.toml
.github/workflows/: build.yaml
src/test_cyice/: __init__.py  test_cyice.pxd
src/test_cyice/cyice/: __init__.py  test_cyice.pyx
src/test_cyice/utils/: __init__.py
tests/: test_integration.py
