[build-system]
requires = ["scikit-build-core", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "test_cyice"
version = "0.0.1"
dependencies = ["numpy", "pytest"]

[tool.scikit-build]
logging.level = "INFO"
sdist.include = ["src/test_cyice/__init__.py"]
sdist.exclude = [
    ".github",
    "*.cmake",
    "test_cyice/cmake/**",
    "test_cyice/ignore-include/**",
    "test_cyice/ignore-data/**"
]
