[build-system]
requires = ["scikit-build-core", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "test_cyice"
version = "0.0.1"
dependencies = ["numpy", "pytest"]

[tool.scikit-build]
logging.level = "INFO"
sdist.include = ["src/test_cyice/__init__.py"]
sdist.exclude = [
    ".github",
    "*.cmake",
    "test_cyice/cmake/**",
    "test_cyice/ignore-include/**",
    "test_cyice/ignore-data/**"
]

[tool.cibuildwheel]
build = ["cp313-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_i686", "pypy*", "pp*", "*-musllinux_aarch64", "*-musllinux_x86_64"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.pyodide]
# disable some errors for pyodide only
environment = { CFLAGS="-Wno-error=implicit-function-declaration -Wno-error=incompatible-pointer-types -Wno-error=return-type" }
# Build Pyodide wheels using Pyodide version 0.28.0
pyodide-version = "0.28.0"