[build-system]
requires = ["scikit-build-core", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "test_cyice"
version = "0.0.1"
dependencies = ["numpy", "pytest"]

[tool.scikit-build]
logging.level = "INFO"
cmake.build-type = "Release"
sdist.include = ["src/test_cyice/__init__.py"]
sdist.exclude = [
    ".github",
    "*.cmake",
    "test_cyice/cmake/**",
    "test_cyice/ignore-include/**",
    "test_cyice/ignore-data/**"
]
wheel.exclude = ["*.a"]

[tool.cibuildwheel]
build = ["cp312-*","cp313-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_i686", "*-musllinux_aarch64", "*-musllinux_x86_64"]
test-command = "pytest {project}/tests"
test-skip = ["*pyodide*"]

[tool.cibuildwheel.pyodide]
# https://github.com/jupyterlite/pyodide-kernel for version/kernel compatibility
build = ["cp312-*"]
skip  = ["cp313-*"]
pyodide-version = "0.27.7" # emscripten 3.1.58
# disable some errors for pyodide only
environment = { CFLAGS="-Wno-error=implicit-function-declaration -Wno-error=incompatible-pointer-types -Wno-error=return-type" }
